--- a/ajax/libs/wavesurfer.js/package.json
+++ b/ajax/libs/wavesurfer.js/package.json
@@ -7,7 +7,7 @@
     "url": "git://github.com/katspaugh/wavesurfer.js.git"
   },
   "author": "",
-  "license": "CC-BY-3.0",
+  "license": "BSD-3-Clause",
   "autoupdate": {
     "source": "git",
     "target": "git://github.com/katspaugh/wavesurfer.js.git",
